--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
   build_runner: ^2.1.4
   get: ^4.3.8
   get_storage: ^2.0.3
+  introduction_screen: ^2.1.0
   provider: ^6.0.1
 
 # For information on the generic Dart part of this file, see the
